# Kria_GPS_1588_PTP

./: CMakeLists.txt  README.md
configs/: chrony.sh  gpsd.service  gpsd.sh  gpsd.socket
notebook/: Master.ipynb  master.ipynb  slave.ipynb
script/: gps-1588-ptp-install.py  gps-1588-ptp-master  gps-1588-ptp-slave  master.sh  slave.sh
src/: main.py  master_gui.py  slave_gui.py
